sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:20: error: illegal start of simple expression
  }
  ^